Attempting to implement damage detection on enemies and attacks for player

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,18 +131,21 @@ WorldSettings=WorldSettings.WorldPartition.None,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,BlendSpace1D.BlendSamples.GroupName,
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-BP_ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
+BP_ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 Enemy_AI_ABP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 Character=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 MovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-BP_Enemy_AI_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
+BP_Enemy_AI_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
+CapsuleComponent=
+StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 
 [EditorStartup]
-LastLevel=/Game/ob_course_joint_ca_2
+LastLevel=/Game/ob_course_joint_ca_3
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -736,10 +739,276 @@ AnimMontage.MetaData=True
 AnimMontage.Thumbnail=True
 EditorAnimSegment.Animation Segment=True
 EditorAnimSegment.Montage=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AssetToolsSettings.Advanced Copy=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.Blackboard=True
+AISystem.Behavior Tree=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AnimationSettings.CustomAttributes=True
+AnimationSettings.Mirroring=True
+AnimationModifierSettings.Modifiers=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Mix=True
+AudioSettings.Quality=True
+AudioSettings.Debug=True
+ChaosSolverSettings.GameInstance=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+ControlRigSettings.Shapes=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CookerSettings.Editor=True
+CrowdManager.Config=True
+DataDrivenConsoleVariableSettings.DataDrivenCVar=True
+DebugCameraControllerSettings.General=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+GarbageCollectionSettings.Debug=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Timecode=True
+Engine.Screenshots=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.ViewportProperties=True
+InputSettings.Input=True
+InputSettings.Mobile=True
+InputSettings.Virtual Keyboard (Mobile)=True
+InputSettings.DefaultClasses=True
+InputSettings.Console=True
+InterchangeProjectSettings.Interchange=True
+InterchangeProjectSettings.Interchange (Experimental)=True
+LandscapeSettings.Layers=True
+LevelSequenceProjectSettings.Timeline=True
+RecastNavMesh.Tick=True
+NavigationSystemV1.Navigation=True
+NavigationSystemV1.NavigationSystem=True
+NavigationSystemV1.Navigation Enforcing=True
+NavigationSystemV1.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+PhysicsSettings.Replication=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Broadphase=True
+PhysicsSettings.ChaosPhysics=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.VirtualTextures=True
+RendererSettings.WorkingColorSpace=True
+RendererSettings.GlobalIllumination=True
+RendererSettings.Reflections=True
+RendererSettings.Lumen=True
+RendererSettings.Shadows=True
+RendererSettings.HardwareRayTracing=True
+RendererSettings.SoftwareRayTracing=True
+RendererSettings.MiscLighting=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Translucency=True
+RendererSettings.VR=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.Experimental=True
+RendererSettings.Editor=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererSettings.Skinning=True
+RendererSettings.PostProcessCalibrationMaterials=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+StreamingSettings.General=True
+StreamingSettings.Deprecated Settings=True
+TextureEncodingProjectSettings.EncodeSpeedSettings=True
+TextureEncodingProjectSettings.EncodeSpeeds=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+WorldPartitionEditorSettings.MapConversion=True
+WorldPartitionEditorSettings.Foliage=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+EditorProjectAppearanceSettings.ReferenceViewer=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+BlueprintEditorProjectSettings.Experimental=True
+BlueprintEditorProjectSettings.Play=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+DDCProjectSettings.Warnings=True
+ProxyLODMeshSimplificationSettings.General=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+EditorPerformanceProjectSettings.ViewportResolution=True
+SkeletalMeshSimplificationSettings.General=True
+SourceControlPreferences.SourceControl=True
+StructViewerProjectSettings.StructVisibilityManagement=True
+TextureImportSettings.VirtualTextures=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.App Bundles=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Input=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+AndroidRuntimeSettings.Misc=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+HoloLensTargetSettings.OS Info=True
+HoloLensTargetSettings.HoloLens=True
+HoloLensTargetSettings.Packaging=True
+HoloLensTargetSettings.Toolchain=True
+HoloLensTargetSettings.App Installer=True
+HoloLensTargetSettings.Capabilities=True
+HoloLensTargetSettings.Rendering=True
+HoloLensTargetSettings.Audio=True
+HoloLensTargetSettings.Spatial Mapping=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.FileSystem=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.LaunchScreen=True
+IOSRuntimeSettings.tvOS=True
+IOSRuntimeSettings.Audio=True
+IOSRuntimeSettings.Misc=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AndroidFileServerRuntimeSettings.Packaging=True
+AndroidFileServerRuntimeSettings.Deployment=True
+AndroidFileServerRuntimeSettings.Connection=True
+AvfMediaSettings.Debug=True
+GeometryCacheStreamerSettings.Geometry Cache Streamer=True
+GooglePADRuntimeSettings.Packaging=True
+GroomPluginSettings.GroomCache=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+LevelSequenceEditorSettings.Tracks=True
+LevelSequenceEditorSettings.Playback=True
+ModelingToolsEditorModeSettings.Modeling Mode=True
+ModelingComponentsSettings.Modeling Tools=True
+NiagaraSettings.Niagara=True
+NiagaraSettings.Viewport=True
+NiagaraSettings.Scalability=True
+NiagaraSettings.Renderer=True
+NiagaraSettings.SkeletalMeshDI=True
+NiagaraSettings.StaticMeshDI=True
+NiagaraSettings.AsyncGpuTraceDI=True
+NiagaraEditorSettings.Niagara=True
+NiagaraEditorSettings.Experimental=True
+NiagaraEditorSettings.SimulationOptions=True
+NiagaraEditorSettings.Niagara Colors=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+PythonScriptPluginSettings.Python=True
+PythonScriptPluginSettings.PythonRemoteExecution=True
+ResonanceAudioSettings.Reverb=True
+ResonanceAudioSettings.General=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Availability=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
+K2Node_InputAction.Input=True
+BP_ThirdPersonCharacter_C.Default=True
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
+SoundCue.Memory=True
+SoundCue.Sound=True
+SoundCue.Attenuation=True
+SoundCue.Effects=True
+SoundCue.Voice Management=True
+SoundCue.Developer=True
+K2Node_VariableSet.Events=True
+Enemy_AI_ABP_C.Default=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -751,7 +1020,7 @@ bHighlightSelectedDataLayers=True
 bDisableLoadingOfLastLoadedCells=False
 bBugItGoLoadCells=False
 bShowCellCoords=False
-PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/ob_course_joint_ca.ob_course_joint_ca", ()),("/Game/ob_course_joint_ca_2.ob_course_joint_ca_2", ()))
+PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/ob_course_joint_ca.ob_course_joint_ca", ()),("/Game/ob_course_joint_ca_2.ob_course_joint_ca_2", ()),("/Game/ob_course_joint_ca_3.ob_course_joint_ca_3", ()))
 
 [RootWindow]
 ScreenPosition=X=631.000 Y=295.000
@@ -776,7 +1045,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -844,6 +1113,12 @@ EditorAnimSegment="\"Object\" "
 EditorAnimBaseObj="\"Object\" "
 AnimMontage="\"Object\" "
 AnimCompositeBase="\"Object\" "
+K2Node_InputAction="\"Object\" "
+FileMediaSource="\"Object\" "
+BaseMediaSource="\"Object\" "
+MediaSource="\"Object\" "
+SoundCue="\"Object\" "
+SoundBase="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -1764,8 +2039,9 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/ob_course_joint_ca_2
-MRUItem1=/Game/ob_course_joint_ca
+MRUItem0=/Game/ob_course_joint_ca_3
+MRUItem1=/Game/ob_course_joint_ca_2
+MRUItem2=/Game/ob_course_joint_ca
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -1788,7 +2064,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Characters/Enemy
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1917,6 +2193,8 @@ PropertyWrapper.Variable=False
 BlendSpace1D.Animation=True
 SkeletalMeshComponent.Animation=False
 Blueprint.ClassOptions=True
+InputSettings.Bindings=False
+AnimSequence.Animation=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2033,26 +2311,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Enemy/BP_Enemy_AI
-MRUItem1=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage
-MRUItem2=/Game/Characters/Enemy/Enemy_Animations/Cross_Punch
-MRUItem3=/Game/Characters/Enemy/Enemy_Animations/Enemy_Cross_Punch
-MRUItem4=/Game/Characters/Enemy/Enemy_ABP
-MRUItem5=/Game/Characters/Enemy/Enemy_AI_ABP
-MRUItem6=/Game/Characters/Enemy/Enemy_BlendSpace1D
-MRUItem7=/Game/Characters/Enemy/Enemy_Animations/Enemy_Blendspace
-MRUItem8=/Game/Characters/Enemy/Enemy_Animations/Enemy_Fast_Walking
-MRUItem9=/Game/Characters/Enemy/Enemy_BlendSpace
-MRUItem10=/Game/Characters/Enemy/BP_Enemy
-MRUItem11=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem12=/Game/Characters/Player/Animations/Neo_BS
-MRUItem13=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem14=/Game/Characters/Enemy/Enemy_Animations/Walking
-MRUItem15=/Game/Characters/Enemy/Enemy_Animations/Bouncing_Fight_Idle
-MRUItem16=/Game/Characters/Enemy/Enemy_Animations/Enemy_Walking
-MRUItem17=/Game/Characters/Enemy/Enemy_Animations/Enemy_Bouncing_Fight_Idle
-MRUItem18=/Game/Characters/Enemy/Enemy_Double_Leg_Takedown_-_Victim
-MRUItem19=/Game/Blueprints/BP_Enemy
+MRUItem0=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem3=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out
+MRUItem4=/Game/Characters/Enemy/Enemy_AI_ABP
+MRUItem5=/Game/Characters/Enemy/BP_Enemy_AI
+MRUItem6=/Game/Characters/Enemy/Enemy_Animations/Knocked_Out
+MRUItem7=/Game/SFX/Hit_Cue
+MRUItem8=/Game/SFX/Hit_Sound
+MRUItem9=/Game/Characters/Player/Animations/Model/neo10_Skeleton
+MRUItem10=/Game/Characters/Enemy/Enemy_Animations/Bouncing_Fight_Idle
+MRUItem11=/Game/Characters/Enemy/Enemy_Animations/Hit_To_Body
+MRUItem12=/Game/Characters/Enemy/Enemy_Animations/Head_Hit__2_
+MRUItem13=/Game/Characters/Enemy/Enemy_Animations/Head_Hit__1_
+MRUItem14=/Game/Characters/Enemy/Enemy_Animations/Head_Hit
+MRUItem15=/Game/Characters/Player/Animations/Motions/Roundhouse_Kick_Montage
+MRUItem16=/Game/Characters/Player/Animations/Motions/Roundhouse_Kick
+MRUItem17=/Game/Characters/Player/Animations/Motions/Neo_Standing_Melee_Kick
+MRUItem18=/Game/Characters/Enemy/Enemy_Animations/Cross_Punch
+MRUItem19=/Game/Characters/Enemy/Enemy_Animations/Enemy_Cross_Punch
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -2090,6 +2368,8 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 /Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI=1
 /Game/Characters/Enemy/Enemy_Animations/Enemy_Cross_Punch.Enemy_Cross_Punch=1
 /Game/Characters/Enemy/Enemy_AI_ABP.Enemy_AI_ABP=1
+/Game/Characters/Player/Animations/Motions/Neo_Standing_Melee_Kick.Neo_Standing_Melee_Kick=1
+/Game/Characters/Player/Animations/Motions/Roundhouse_Kick.Roundhouse_Kick=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2136,4 +2416,20 @@ GraphEditorQuickJumps=()
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[DetailMultiObjectNodeExpansion]
+GeneralProjectSettings=True
+GameMapsSettings=True
+AssetManagerSettings=True
+AudioSettings=True
+ChaosSolverSettings=True
+Engine=True
+InputSettings=True
+LevelSequenceProjectSettings=True
+RendererSettings=True
+UMGEditorProjectSettings=True
+LevelSequenceEditorSettings=True
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
