--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -143,6 +143,7 @@ BP_Enemy_AI_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_V
 CapsuleComponent=
 StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+K2Node_MacroInstance=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca_3
@@ -1005,9 +1006,29 @@ SoundCue.Voice Management=True
 SoundCue.Developer=True
 K2Node_VariableSet.Events=True
 Enemy_AI_ABP_C.Default=True
+EditorNotifyObject.AnimNotify=True
+EditorNotifyObject.Trigger Settings=True
+EditorNotifyObject.Category=True
+EditorNotifyObject.AnimLink=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI
+OpenAssetsAtExit=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage.Enemy_Punch_Montage
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -1045,7 +1066,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.SkeletalMeshes\" "
+Object="\"Object\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -1119,6 +1140,8 @@ BaseMediaSource="\"Object\" "
 MediaSource="\"Object\" "
 SoundCue="\"Object\" "
 SoundBase="\"Object\" "
+EditorNotifyObject="\"Object\" "
+SphereComponent="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -2064,7 +2087,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Characters/Enemy/Enemy_Animations
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2311,12 +2334,12 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem3=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out
-MRUItem4=/Game/Characters/Enemy/Enemy_AI_ABP
-MRUItem5=/Game/Characters/Enemy/BP_Enemy_AI
+MRUItem0=/Game/Characters/Enemy/BP_Enemy_AI
+MRUItem1=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem3=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem4=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out
+MRUItem5=/Game/Characters/Enemy/Enemy_AI_ABP
 MRUItem6=/Game/Characters/Enemy/Enemy_Animations/Knocked_Out
 MRUItem7=/Game/SFX/Hit_Cue
 MRUItem8=/Game/SFX/Hit_Sound
