--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2087,7 +2087,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Characters/Enemy/Enemy_Animations
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2334,26 +2334,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Enemy/BP_Enemy_AI
-MRUItem1=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem4=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out
-MRUItem5=/Game/Characters/Enemy/Enemy_AI_ABP
-MRUItem6=/Game/Characters/Enemy/Enemy_Animations/Knocked_Out
-MRUItem7=/Game/SFX/Hit_Cue
-MRUItem8=/Game/SFX/Hit_Sound
-MRUItem9=/Game/Characters/Player/Animations/Model/neo10_Skeleton
-MRUItem10=/Game/Characters/Enemy/Enemy_Animations/Bouncing_Fight_Idle
-MRUItem11=/Game/Characters/Enemy/Enemy_Animations/Hit_To_Body
-MRUItem12=/Game/Characters/Enemy/Enemy_Animations/Head_Hit__2_
-MRUItem13=/Game/Characters/Enemy/Enemy_Animations/Head_Hit__1_
-MRUItem14=/Game/Characters/Enemy/Enemy_Animations/Head_Hit
-MRUItem15=/Game/Characters/Player/Animations/Motions/Roundhouse_Kick_Montage
-MRUItem16=/Game/Characters/Player/Animations/Motions/Roundhouse_Kick
-MRUItem17=/Game/Characters/Player/Animations/Motions/Neo_Standing_Melee_Kick
-MRUItem18=/Game/Characters/Enemy/Enemy_Animations/Cross_Punch
-MRUItem19=/Game/Characters/Enemy/Enemy_Animations/Enemy_Cross_Punch
+MRUItem0=/Game/ThirdPerson/Widgets/Health_Bar_Widget
+MRUItem1=/Game/Characters/Enemy/BP_Enemy_AI
+MRUItem2=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem4=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem5=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out
+MRUItem6=/Game/Characters/Enemy/Enemy_AI_ABP
+MRUItem7=/Game/Characters/Enemy/Enemy_Animations/Knocked_Out
+MRUItem8=/Game/SFX/Hit_Cue
+MRUItem9=/Game/SFX/Hit_Sound
+MRUItem10=/Game/Characters/Player/Animations/Model/neo10_Skeleton
+MRUItem11=/Game/Characters/Enemy/Enemy_Animations/Bouncing_Fight_Idle
+MRUItem12=/Game/Characters/Enemy/Enemy_Animations/Hit_To_Body
+MRUItem13=/Game/Characters/Enemy/Enemy_Animations/Head_Hit__2_
+MRUItem14=/Game/Characters/Enemy/Enemy_Animations/Head_Hit__1_
+MRUItem15=/Game/Characters/Enemy/Enemy_Animations/Head_Hit
+MRUItem16=/Game/Characters/Player/Animations/Motions/Roundhouse_Kick_Montage
+MRUItem17=/Game/Characters/Player/Animations/Motions/Roundhouse_Kick
+MRUItem18=/Game/Characters/Player/Animations/Motions/Neo_Standing_Melee_Kick
+MRUItem19=/Game/Characters/Enemy/Enemy_Animations/Cross_Punch
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -2455,4 +2455,66 @@ LevelSequenceEditorSettings=True
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
 
