--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -140,10 +140,11 @@ Character=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 MovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 BP_Enemy_AI_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
-CapsuleComponent=
-StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+CapsuleComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
+StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 K2Node_MacroInstance=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
+K2Node_FunctionResult=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca_3
@@ -1024,6 +1025,41 @@ SphereComponent.Tags=True
 SphereComponent.ComponentReplication=True
 SphereComponent.Cooking=True
 SphereComponent.Events=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+Health_Bar_Widget_C.Appearance=True
+Health_Bar_Widget_C.Input=True
+Health_Bar_Widget_C.Accessibility=True
+Health_Bar_Widget_C.Interaction=True
+Health_Bar_Widget_C.Behavior=True
+Health_Bar_Widget_C.Render Transform=True
+Health_Bar_Widget_C.Performance=True
+Health_Bar_Widget_C.Clipping=True
+Health_Bar_Widget_C.Navigation=True
+Health_Bar_Widget_C.Localization=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+ProgressBar.Layout=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1142,6 +1178,13 @@ SoundCue="\"Object\" "
 SoundBase="\"Object\" "
 EditorNotifyObject="\"Object\" "
 SphereComponent="\"Object\" "
+ProgressBar="\"Object\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+Health_Bar_Widget_C="\"Object\" "
+UserWidget="\"Object\" "
+CanvasPanel="\"Object\" "
+PanelWidget="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -2439,6 +2482,19 @@ GraphEditorQuickJumps=()
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
