--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -140,11 +140,14 @@ Character=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 MovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 BP_Enemy_AI_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
-CapsuleComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
+CapsuleComponent=
 StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 K2Node_MacroInstance=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 K2Node_FunctionResult=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
+BrushComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
+BoxComponent=BoxComponent.Collision.Collision,
+K2Node_InputAction=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca_3
@@ -1060,11 +1063,17 @@ K2Node_FunctionEntry.Outputs=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
+BP_ThirdPersonGameMode_C.Tick=True
+BP_ThirdPersonGameMode_C.Classes=True
+BP_ThirdPersonGameMode_C.Game=True
+BP_ThirdPersonGameMode_C.GameMode=True
+BP_ThirdPersonGameMode_C.Events=True
+BP_Enemy_AI_C.Combat=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Characters/Player/Animations/Motions/Takedown_A_Player.Takedown_A_Player
 OpenAssetsAtExit=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI
-OpenAssetsAtExit=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage.Enemy_Punch_Montage
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -1099,7 +1108,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
 WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
-Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
@@ -1158,7 +1167,7 @@ K2Node_InputKey="\"Object\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
-BP_ThirdPersonCharacter_C=
+BP_ThirdPersonCharacter_C="\"Object.CharacterMovement\" "
 Character=
 Pawn=
 Blueprint="\"Object\" "
@@ -1185,6 +1194,7 @@ Health_Bar_Widget_C="\"Object\" "
 UserWidget="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
+BP_Enemy_AI_C=
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -2261,6 +2271,7 @@ SkeletalMeshComponent.Animation=False
 Blueprint.ClassOptions=True
 InputSettings.Bindings=False
 AnimSequence.Animation=True
+BoxComponent.Collision=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2377,26 +2388,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Widgets/Health_Bar_Widget
-MRUItem1=/Game/Characters/Enemy/BP_Enemy_AI
-MRUItem2=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage
+MRUItem0=/Game/Characters/Enemy/Enemy_Animations/Takedown_A_Enemy
+MRUItem1=/Game/Characters/Player/Animations/Motions/Takedown_A_Player
+MRUItem2=/Game/Characters/Enemy/BP_Enemy_AI
 MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem5=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out
-MRUItem6=/Game/Characters/Enemy/Enemy_AI_ABP
-MRUItem7=/Game/Characters/Enemy/Enemy_Animations/Knocked_Out
-MRUItem8=/Game/SFX/Hit_Cue
-MRUItem9=/Game/SFX/Hit_Sound
-MRUItem10=/Game/Characters/Player/Animations/Model/neo10_Skeleton
-MRUItem11=/Game/Characters/Enemy/Enemy_Animations/Bouncing_Fight_Idle
-MRUItem12=/Game/Characters/Enemy/Enemy_Animations/Hit_To_Body
-MRUItem13=/Game/Characters/Enemy/Enemy_Animations/Head_Hit__2_
-MRUItem14=/Game/Characters/Enemy/Enemy_Animations/Head_Hit__1_
-MRUItem15=/Game/Characters/Enemy/Enemy_Animations/Head_Hit
-MRUItem16=/Game/Characters/Player/Animations/Motions/Roundhouse_Kick_Montage
-MRUItem17=/Game/Characters/Player/Animations/Motions/Roundhouse_Kick
-MRUItem18=/Game/Characters/Player/Animations/Motions/Neo_Standing_Melee_Kick
-MRUItem19=/Game/Characters/Enemy/Enemy_Animations/Cross_Punch
+MRUItem4=/Game/Characters/Player/Animations/Motions/Rockin__Shackle_A
+MRUItem5=/Game/Characters/Enemy/Enemy_Animations/Rockin__Shackle_Takedown_B
+MRUItem6=/Game/Characters/Enemy/Enemy_Animations/Enemy_Rockin__Shackle_B
+MRUItem7=/Game/Characters/Player/Animations/Motions/Right_Neo_Standing_Melee_Kick_Montage
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem9=/Game/ThirdPerson/Widgets/Health_Bar_Widget
+MRUItem10=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage
+MRUItem11=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem12=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out
+MRUItem13=/Game/Characters/Enemy/Enemy_AI_ABP
+MRUItem14=/Game/Characters/Enemy/Enemy_Animations/Knocked_Out
+MRUItem15=/Game/SFX/Hit_Cue
+MRUItem16=/Game/SFX/Hit_Sound
+MRUItem17=/Game/Characters/Player/Animations/Model/neo10_Skeleton
+MRUItem18=/Game/Characters/Enemy/Enemy_Animations/Bouncing_Fight_Idle
+MRUItem19=/Game/Characters/Enemy/Enemy_Animations/Hit_To_Body
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -2436,6 +2447,10 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 /Game/Characters/Enemy/Enemy_AI_ABP.Enemy_AI_ABP=1
 /Game/Characters/Player/Animations/Motions/Neo_Standing_Melee_Kick.Neo_Standing_Melee_Kick=1
 /Game/Characters/Player/Animations/Motions/Roundhouse_Kick.Roundhouse_Kick=1
+/Game/Characters/Player/Animations/Motions/Right_Neo_Standing_Melee_Kick_Montage.Right_Neo_Standing_Melee_Kick_Montage=1
+/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage.Enemy_Punch_Montage=1
+/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=1
+/Game/Characters/Enemy/Enemy_Animations/Enemy_Rockin__Shackle_B.Enemy_Rockin__Shackle_B=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2508,6 +2523,16 @@ LevelSequenceProjectSettings=True
 RendererSettings=True
 UMGEditorProjectSettings=True
 LevelSequenceEditorSettings=True
+ProjectPackagingSettings=True
+ConsoleSettings=True
+GameplayDebuggerConfig=True
+RecastNavMesh=True
+PhysicsSettings=True
+AndroidRuntimeSettings=True
+HoloLensTargetSettings=True
+IOSRuntimeSettings=True
+NiagaraSettings=True
+NiagaraEditorSettings=True
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
