--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -133,14 +133,14 @@ BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Tra
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,BlendSpace1D.BlendSamples.GroupName,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 BP_ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
-CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 Enemy_AI_ABP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 Character=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 MovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 BP_Enemy_AI_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
-CapsuleComponent=
+CapsuleComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 K2Node_MacroInstance=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
@@ -1156,10 +1156,6 @@ AnimGraphNode_Slot.Tag=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Characters/Enemy/Enemy_Animations/Takedown_A_Enemy.Takedown_A_Enemy
-OpenAssetsAtExit=/Game/Characters/Player/Animations/Motions/Takedown_A_Player.Takedown_A_Player
-OpenAssetsAtExit=/Game/Characters/Player/Animations/Neo_Blueprint.Neo_Blueprint
-OpenAssetsAtExit=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -1230,8 +1226,8 @@ BillboardComponent="\"Object\" "
 TextRenderComponent="\"Object\" "
 BoneProxy="\"Object\" "
 AnimSequence="\"Object\" "
-AnimSequenceBase="\"Object\" "
-AnimationAsset="\"Object\" "
+AnimSequenceBase="\"Object\" \"Object.BlendOption.BlendOut\" "
+AnimationAsset="\"Object\" \"Object.BlendOption.BlendOut\" "
 Neo_Blueprint_C="\"Object\" "
 AnimInstance="\"Object\" "
 AnimGraphNode_StateMachine="\"Object\" "
@@ -1253,9 +1249,9 @@ K2Node_InputKey="\"Object\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
-BP_ThirdPersonCharacter_C="\"Object.CharacterMovement\" "
-Character=
-Pawn=
+BP_ThirdPersonCharacter_C="\"Object.KickAnimMontage\" "
+Character="\"Object.KickAnimMontage\" "
+Pawn="\"Object.KickAnimMontage\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 Enemy_ABP_C="\"Object\" "
@@ -1263,8 +1259,8 @@ Enemy_AI_ABP_C="\"Object\" "
 AnimGraphNode_Root="\"Object\" "
 EditorAnimSegment="\"Object\" "
 EditorAnimBaseObj="\"Object\" "
-AnimMontage="\"Object\" "
-AnimCompositeBase="\"Object\" "
+AnimMontage="\"Object\" \"Object.BlendOption.BlendOut\" "
+AnimCompositeBase="\"Object\" \"Object.BlendOption.BlendOut\" "
 K2Node_InputAction="\"Object\" "
 FileMediaSource="\"Object\" "
 BaseMediaSource="\"Object\" "
@@ -2295,7 +2291,7 @@ MRUItem2=/Game/ob_course_joint_ca
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Characters/Mannequins/Animations/Quinn
+ContentBrowserTab1.SelectedPaths=/Game/Characters/Enemy
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -2561,11 +2557,11 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem1=/Game/Characters/Enemy/Enemy_Animations/Takedown_A_Enemy
-MRUItem2=/Game/Characters/Player/Animations/Motions/Takedown_A_Player
-MRUItem3=/Game/Characters/Enemy/BP_Enemy_AI
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem2=/Game/Characters/Enemy/Enemy_Animations/Takedown_A_Enemy
+MRUItem3=/Game/Characters/Player/Animations/Motions/Takedown_A_Player
+MRUItem4=/Game/Characters/Enemy/BP_Enemy_AI
 MRUItem5=/Game/Characters/Player/Animations/Motions/Rockin__Shackle_A
 MRUItem6=/Game/Characters/Enemy/Enemy_Animations/Rockin__Shackle_Takedown_B
 MRUItem7=/Game/Characters/Enemy/Enemy_Animations/Enemy_Rockin__Shackle_B
@@ -2624,6 +2620,8 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 /Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage.Enemy_Punch_Montage=1
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=1
 /Game/Characters/Enemy/Enemy_Animations/Enemy_Rockin__Shackle_B.Enemy_Rockin__Shackle_B=1
+/Game/Characters/Player/Animations/Motions/Takedown_A_Player.Takedown_A_Player=1
+/Game/Characters/Enemy/Enemy_Animations/Takedown_A_Enemy.Takedown_A_Enemy=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
