--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,19 +131,19 @@ WorldSettings=WorldSettings.WorldPartition.None,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,BlendSpace1D.BlendSamples.GroupName,
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
-BP_ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
+BP_ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
 CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 Enemy_AI_ABP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 Character=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 MovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
-BP_Enemy_AI_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
-CapsuleComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
+BP_Enemy_AI_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
+CapsuleComponent=
 StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-K2Node_MacroInstance=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
+K2Node_MacroInstance=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
 K2Node_FunctionResult=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 BrushComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
 BoxComponent=BoxComponent.Collision.Collision,
@@ -1156,7 +1156,10 @@ AnimGraphNode_Slot.Tag=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI
+OpenAssetsAtExit=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out_Montage.Enemy_Knocked_Out_Montage
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Characters/Enemy/Enemy_AI_ABP.Enemy_AI_ABP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1249,9 +1252,9 @@ K2Node_InputKey="\"Object\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
-BP_ThirdPersonCharacter_C="\"Object.KickAnimMontage\" "
-Character="\"Object.KickAnimMontage\" "
-Pawn="\"Object.KickAnimMontage\" "
+BP_ThirdPersonCharacter_C="\"Object.Object Types\" "
+Character=
+Pawn=
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 Enemy_ABP_C="\"Object\" "
@@ -2557,26 +2560,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem2=/Game/Characters/Enemy/Enemy_Animations/Takedown_A_Enemy
-MRUItem3=/Game/Characters/Player/Animations/Motions/Takedown_A_Player
-MRUItem4=/Game/Characters/Enemy/BP_Enemy_AI
-MRUItem5=/Game/Characters/Player/Animations/Motions/Rockin__Shackle_A
-MRUItem6=/Game/Characters/Enemy/Enemy_Animations/Rockin__Shackle_Takedown_B
-MRUItem7=/Game/Characters/Enemy/Enemy_Animations/Enemy_Rockin__Shackle_B
-MRUItem8=/Game/Characters/Player/Animations/Motions/Right_Neo_Standing_Melee_Kick_Montage
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem10=/Game/ThirdPerson/Widgets/Health_Bar_Widget
-MRUItem11=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage
-MRUItem12=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out
-MRUItem13=/Game/Characters/Enemy/Enemy_AI_ABP
-MRUItem14=/Game/Characters/Enemy/Enemy_Animations/Knocked_Out
-MRUItem15=/Game/SFX/Hit_Cue
-MRUItem16=/Game/SFX/Hit_Sound
-MRUItem17=/Game/Characters/Player/Animations/Model/neo10_Skeleton
-MRUItem18=/Game/Characters/Enemy/Enemy_Animations/Bouncing_Fight_Idle
-MRUItem19=/Game/Characters/Enemy/Enemy_Animations/Hit_To_Body
+MRUItem0=/Game/Characters/Player/Animations/Motions/Taking_Punch_Montage
+MRUItem1=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out_Montage
+MRUItem2=/Game/Characters/Enemy/BP_Enemy_AI
+MRUItem3=/Game/Characters/Enemy/Enemy_AI_ABP
+MRUItem4=/Game/Characters/Player/Animations/Model/neo10_Skeleton
+MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem6=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem7=/Game/Characters/Enemy/Enemy_Animations/Takedown_A_Enemy
+MRUItem8=/Game/Characters/Player/Animations/Motions/Takedown_A_Player
+MRUItem9=/Game/Characters/Player/Animations/Motions/Rockin__Shackle_A
+MRUItem10=/Game/Characters/Enemy/Enemy_Animations/Rockin__Shackle_Takedown_B
+MRUItem11=/Game/Characters/Enemy/Enemy_Animations/Enemy_Rockin__Shackle_B
+MRUItem12=/Game/Characters/Player/Animations/Motions/Right_Neo_Standing_Melee_Kick_Montage
+MRUItem13=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem14=/Game/ThirdPerson/Widgets/Health_Bar_Widget
+MRUItem15=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage
+MRUItem16=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out
+MRUItem17=/Game/Characters/Enemy/Enemy_Animations/Knocked_Out
+MRUItem18=/Game/SFX/Hit_Cue
+MRUItem19=/Game/SFX/Hit_Sound
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
