Fixed up death conditions for enemies and added player tags to keep enemies from damaging one another

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1171,11 +1171,25 @@ CameraComponent.ComponentReplication=True
 CameraComponent.Activation=True
 CameraComponent.Cooking=True
 CameraComponent.Events=True
+ArrowComponent.Variable=True
+ArrowComponent.TransformCommon=True
+ArrowComponent.Sockets=True
+ArrowComponent.ArrowComponent=True
+ArrowComponent.HLOD=True
+ArrowComponent.Rendering=True
+ArrowComponent.ComponentTick=True
+ArrowComponent.Navigation=True
+ArrowComponent.Tags=True
+ArrowComponent.ComponentReplication=True
+ArrowComponent.Cooking=True
+ArrowComponent.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI
+OpenAssetsAtExit=/Engine/EditorBlueprintResources/StandardMacros.StandardMacros
+OpenAssetsAtExit=/Game/ThirdPerson/Widgets/Health_Bar_Widget.Health_Bar_Widget
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1384,6 +1398,7 @@ UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 AnimGraphNode_Slot="\"Object\" "
 CameraComponent="\"Object\" "
+ArrowComponent="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -2577,26 +2592,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Player/Animations/Motions/Player_Knocked_Out_Montage
-MRUItem1=/Game/ThirdPerson/Widgets/Health_Bar_Widget
-MRUItem2=/Game/Characters/Enemy/BP_Enemy_AI
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/Characters/Player/Animations/Motions/Player_Knocked_Out
-MRUItem5=/Game/Characters/Player/Animations/Motions/Taking_Punch_Montage
-MRUItem6=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out_Montage
-MRUItem7=/Game/Characters/Enemy/Enemy_AI_ABP
-MRUItem8=/Game/Characters/Player/Animations/Model/neo10_Skeleton
-MRUItem9=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem10=/Game/Characters/Enemy/Enemy_Animations/Takedown_A_Enemy
-MRUItem11=/Game/Characters/Player/Animations/Motions/Takedown_A_Player
-MRUItem12=/Game/Characters/Player/Animations/Motions/Rockin__Shackle_A
-MRUItem13=/Game/Characters/Enemy/Enemy_Animations/Rockin__Shackle_Takedown_B
-MRUItem14=/Game/Characters/Enemy/Enemy_Animations/Enemy_Rockin__Shackle_B
-MRUItem15=/Game/Characters/Player/Animations/Motions/Right_Neo_Standing_Melee_Kick_Montage
-MRUItem16=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem17=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage
-MRUItem18=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out
-MRUItem19=/Game/Characters/Enemy/Enemy_Animations/Knocked_Out
+MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem1=/Game/Characters/Player/Animations/Motions/Player_Knocked_Out_Montage
+MRUItem2=/Game/ThirdPerson/Widgets/Health_Bar_Widget
+MRUItem3=/Game/Characters/Enemy/BP_Enemy_AI
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem5=/Game/Characters/Player/Animations/Motions/Player_Knocked_Out
+MRUItem6=/Game/Characters/Player/Animations/Motions/Taking_Punch_Montage
+MRUItem7=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out_Montage
+MRUItem8=/Game/Characters/Enemy/Enemy_AI_ABP
+MRUItem9=/Game/Characters/Player/Animations/Model/neo10_Skeleton
+MRUItem10=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem11=/Game/Characters/Enemy/Enemy_Animations/Takedown_A_Enemy
+MRUItem12=/Game/Characters/Player/Animations/Motions/Takedown_A_Player
+MRUItem13=/Game/Characters/Player/Animations/Motions/Rockin__Shackle_A
+MRUItem14=/Game/Characters/Enemy/Enemy_Animations/Rockin__Shackle_Takedown_B
+MRUItem15=/Game/Characters/Enemy/Enemy_Animations/Enemy_Rockin__Shackle_B
+MRUItem16=/Game/Characters/Player/Animations/Motions/Right_Neo_Standing_Melee_Kick_Montage
+MRUItem17=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem18=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage
+MRUItem19=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
