Takedown animation progress

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -133,7 +133,7 @@ BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Tra
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,BlendSpace1D.BlendSamples.GroupName,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
 BP_ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
-CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
+CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
 Enemy_AI_ABP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 Character=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
@@ -229,6 +229,8 @@ TcpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 TemplateSequenceEditorSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,
+EdGraph=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
+K2Node_CustomEvent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca_3
@@ -1183,13 +1185,12 @@ ArrowComponent.Tags=True
 ArrowComponent.ComponentReplication=True
 ArrowComponent.Cooking=True
 ArrowComponent.Events=True
+BP_ThirdPersonCharacter_C.Cooking=True
+BP_ThirdPersonCharacter_C.DataLayers=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI
-OpenAssetsAtExit=/Engine/EditorBlueprintResources/StandardMacros.StandardMacros
-OpenAssetsAtExit=/Game/ThirdPerson/Widgets/Health_Bar_Widget.Health_Bar_Widget
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1226,7 +1227,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -1259,8 +1260,8 @@ BillboardComponent="\"Object\" "
 TextRenderComponent="\"Object\" "
 BoneProxy="\"Object\" "
 AnimSequence="\"Object\" "
-AnimSequenceBase="\"Object\" \"Object.BlendOption.BlendOut\" "
-AnimationAsset="\"Object\" \"Object.BlendOption.BlendOut\" "
+AnimSequenceBase="\"Object\" "
+AnimationAsset="\"Object\" "
 Neo_Blueprint_C="\"Object\" "
 AnimInstance="\"Object\" "
 AnimGraphNode_StateMachine="\"Object\" "
@@ -1282,9 +1283,9 @@ K2Node_InputKey="\"Object\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
-BP_ThirdPersonCharacter_C=
-Character=
-Pawn=
+BP_ThirdPersonCharacter_C="\"Object\" "
+Character="\"Object\" "
+Pawn="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 Enemy_ABP_C="\"Object\" "
@@ -1309,7 +1310,7 @@ Health_Bar_Widget_C="\"Object\" "
 UserWidget="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-BP_Enemy_AI_C=
+BP_Enemy_AI_C="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -2326,7 +2327,7 @@ MRUItem2=/Game/ob_course_joint_ca
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Characters/Enemy
+ContentBrowserTab1.SelectedPaths=/Game/Characters/Player/Animations/Motions
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -2592,26 +2593,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem1=/Game/Characters/Player/Animations/Motions/Player_Knocked_Out_Montage
-MRUItem2=/Game/ThirdPerson/Widgets/Health_Bar_Widget
-MRUItem3=/Game/Characters/Enemy/BP_Enemy_AI
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem5=/Game/Characters/Player/Animations/Motions/Player_Knocked_Out
-MRUItem6=/Game/Characters/Player/Animations/Motions/Taking_Punch_Montage
-MRUItem7=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out_Montage
-MRUItem8=/Game/Characters/Enemy/Enemy_AI_ABP
-MRUItem9=/Game/Characters/Player/Animations/Model/neo10_Skeleton
-MRUItem10=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem11=/Game/Characters/Enemy/Enemy_Animations/Takedown_A_Enemy
-MRUItem12=/Game/Characters/Player/Animations/Motions/Takedown_A_Player
-MRUItem13=/Game/Characters/Player/Animations/Motions/Rockin__Shackle_A
-MRUItem14=/Game/Characters/Enemy/Enemy_Animations/Rockin__Shackle_Takedown_B
-MRUItem15=/Game/Characters/Enemy/Enemy_Animations/Enemy_Rockin__Shackle_B
-MRUItem16=/Game/Characters/Player/Animations/Motions/Right_Neo_Standing_Melee_Kick_Montage
-MRUItem17=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem18=/Game/Characters/Enemy/Enemy_Animations/Enemy_Punch_Montage
-MRUItem19=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out
+MRUItem0=/Game/Characters/Player/Animations/Motions/Brutal_Assassination_Player
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/Characters/Player/Animations/Motions/Takedown_A3
+MRUItem3=/Game/Characters/Player/Animations/Motions/Takedown_A_Player
+MRUItem4=/Game/Characters/Player/Animations/Motions/Takedown_A2
+MRUItem5=/Game/Characters/Player/Animations/Motions/Takedown_A
+MRUItem6=/Game/Characters/Player/Animations/Motions/Takedown_A1
+MRUItem7=/Game/Characters/Player/Animations/Motions/Rockin__Shackle_A
+MRUItem8=/Game/Characters/Player/Animations/Motions/Roundhouse_Kick
+MRUItem9=/Game/Characters/Enemy/BP_Enemy_AI
+MRUItem10=/Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out_Montage
+MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem12=/Game/Characters/Player/Animations/Motions/Player_Knocked_Out_Montage
+MRUItem13=/Game/ThirdPerson/Widgets/Health_Bar_Widget
+MRUItem14=/Game/Characters/Player/Animations/Motions/Player_Knocked_Out
+MRUItem15=/Game/Characters/Player/Animations/Motions/Taking_Punch_Montage
+MRUItem16=/Game/Characters/Enemy/Enemy_AI_ABP
+MRUItem17=/Game/Characters/Player/Animations/Model/neo10_Skeleton
+MRUItem18=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem19=/Game/Characters/Enemy/Enemy_Animations/Takedown_A_Enemy
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -2659,6 +2660,10 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 /Game/Characters/Enemy/Enemy_Animations/Takedown_A_Enemy.Takedown_A_Enemy=1
 /Game/Characters/Enemy/Enemy_Animations/Enemy_Knocked_Out_Montage.Enemy_Knocked_Out_Montage=1
 /Game/Characters/Player/Animations/Motions/Player_Knocked_Out_Montage.Player_Knocked_Out_Montage=1
+/Game/ThirdPerson/Widgets/Health_Bar_Widget.Health_Bar_Widget=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
+/Game/Characters/Player/Animations/Motions/Rockin__Shackle_A.Rockin__Shackle_A=1
+/Game/Characters/Player/Animations/Motions/Brutal_Assassination_Player.Brutal_Assassination_Player=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
